# sign-pbo

./: .gitignore  README.md  pyproject.toml  sign_pbo.py
.github/workflows/: ci.yml
scripts/: gen_test_key.py
tests/: conftest.py  test_sign.py
tests/fixtures/: TestAuthority.privatekey
