[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sign-pbo"
version = "1.1.1"
description = "DayZ-aware PBO signer (V3 bisign format, includes .c files in hash3)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Bushy", email = "contact@bushy.dev" }]
keywords = ["dayz", "arma", "pbo", "bisign"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/bearmeister/sign-pbo"
Issues = "https://github.com/bearmeister/sign-pbo/issues"

[project.scripts]
sign-pbo = "sign_pbo:main"

[tool.setuptools]
py-modules = ["sign_pbo"]
